Closed Bug 67067 Opened 24 years ago Closed 21 years ago

"unable to create directory" dialog is titleless

Categories

(SeaMonkey :: Installer, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: ssu0262)

References

Details

Attachments

(1 file, 2 obsolete files)

the dialog "unable to create directory" doesn't have an title.
To reproduce just try to install Mozilla into a directory called:
C:\Program Files\mozilla.org\Mozilla"""<<<<>>*
over to Ying.
Assignee: ssu → yxia
Bug fixed with the following patch, plus the file "install.ini" with an 
additional string:
   ERROR_MESSAGE_TITLE=Error
Attached patch Patch (obsolete) — Splinter Review
Please r and sr. Thanks.
Comment on attachment 59296 [details] [diff] [review]
Patch

Q: when is ERROR_MESSAGE_TITLE
defined? LXR didn't report any incidence of the string.
Attached patch Patch for install.it (obsolete) — Splinter Review
Attachment #59296 - Flags: review+
Attachment #59412 - Flags: review+
Sean, can you please check the 2 patch in? I don't have the cvs account yet. 
Thanks.
Since this bug is similar with bug 48051, I just made one patch for both bug 
fixes. Mark as "depends as".

dbragg: "Technically they're both "clean-up" type bugs and they're both in the 
same sub-system (the install wizard).  I believe that there would actually be 
less chance of error in a single check-in than if it was split into 2. I think 
would be the safest (and most efficient by the way) checkin procedure for these 
two bugs."
Depends on: 48051
we have an old old patch here?
Ying-Lin: is it still valid? And should we reassign to Sean?
Attachment #59296 - Flags: superreview?(dveditz)
Attachment #59412 - Flags: superreview?(dveditz)
it's a trivial patch.  I can drive it in once patches get sr=.
Comment on attachment 59296 [details] [diff] [review]
Patch

rs=dmose
Attachment #59296 - Flags: superreview?(dveditz) → superreview+
Comment on attachment 59412 [details] [diff] [review]
Patch for install.it

sr=dmose@mozilla.org, conditional on filing a new bug to use a string along the
lines of "$ProductInternalName$ Error" in the future so that it's possible to
tell what app this belongs to when looking at the Taskbar with Alt-TAB.
Attachment #59412 - Flags: superreview?(dveditz) → superreview+
Attached patch patch v1.1Splinter Review
new patch that is merged against the current trunk (old patches got stale) and
also has dmose's suggested fix.
Attachment #59296 - Attachment is obsolete: true
Attachment #59412 - Attachment is obsolete: true
Attachment #121473 - Flags: approval1.4b?
Comment on attachment 121473 [details] [diff] [review]
patch v1.1

a=asa (on behalf of drivers) for checkin to 1.4beta.
Attachment #121473 - Flags: approval1.4b? → approval1.4b+
patch checked in.
Status: NEW → ASSIGNED
patch backed out due to bug 203194.
Assignee: yxia → ssu
Status: ASSIGNED → NEW
Depends on: 203194
patch checked in again.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
verified build 2003050104
Status: RESOLVED → VERIFIED
QA Contact: bugzilla → gbush
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: