fixing bug 67067 - unable-to-create-directory dialog is titleless. r=curt, sr=dmose, a=asa